unpackaged/main/default/objects/Ordered_Part__c/Ordered_Part__c.object-meta.xml
<CustomObject>
    <label>Ordered Part</label>
    <nameField>
        <label>Xometry Ordered Part ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordered Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>