unpackaged/main/default/objects/Ordered_Part__c/fields/AdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>AdditionalComments__c</fullName>
    <label>Additional Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>