unpackaged/main/default/objects/Ordered_Part__c/fields/Additive__c.field-meta.xml
<CustomField>
    <fullName>Additive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additive?</label>
    <type>Checkbox</type>
</CustomField>