unpackaged/main/default/objects/Ordered_Part__c/fields/AllJobIDs__c.field-meta.xml
<CustomField>
    <fullName>AllJobIDs__c</fullName>
    <label>All Job IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>