unpackaged/main/default/objects/Ordered_Part__c/fields/Bad_Outcome_Reject_Probability__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcome_Reject_Probability__c</fullName>
    <label>Bad Outcome Reject Probability</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>