unpackaged/main/default/objects/Ordered_Part__c/fields/BAD_OUTCOME_REJECTED_REASON_1__c.field-meta.xml
<CustomField>
    <fullName>BAD_OUTCOME_REJECTED_REASON_1__c</fullName>
    <label>BAD OUTCOME REJECTED REASON 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>