unpackaged/main/default/objects/Ordered_Part__c/fields/CurrentJobID__c.field-meta.xml
<CustomField>
    <fullName>CurrentJobID__c</fullName>
    <label>Current Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>