unpackaged/main/default/objects/Ordered_Part__c/fields/CurrentlyExpired__c.field-meta.xml
<CustomField>
    <fullName>CurrentlyExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a part is currently in an Expired status</description>
    <label>Currently Expired</label>
    <type>Checkbox</type>
</CustomField>