unpackaged/main/default/objects/Ordered_Part__c/fields/CurrentlyRejected__c.field-meta.xml
<CustomField>
    <fullName>CurrentlyRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Rejected</label>
    <type>Checkbox</type>
</CustomField>