unpackaged/main/default/objects/Ordered_Part__c/fields/CustomerNotes__c.field-meta.xml
<CustomField>
    <fullName>CustomerNotes__c</fullName>
    <label>Customer Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>