unpackaged/main/default/objects/Ordered_Part__c/fields/CustomerPartID__c.field-meta.xml
<CustomField>
    <fullName>CustomerPartID__c</fullName>
    <label>Customer Part ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>