unpackaged/main/default/objects/Ordered_Part__c/fields/CustomerPrice__c.field-meta.xml
<CustomField>
    <fullName>CustomerPrice__c</fullName>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>