unpackaged/main/default/objects/Ordered_Part__c/fields/CustomFinishName__c.field-meta.xml
<CustomField>
    <fullName>CustomFinishName__c</fullName>
    <label>Custom Finish Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>