unpackaged/main/default/objects/Ordered_Part__c/fields/CustomMaterialName__c.field-meta.xml
<CustomField>
    <fullName>CustomMaterialName__c</fullName>
    <label>Custom Material Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>