unpackaged/main/default/objects/Ordered_Part__c/fields/EUD_CountryOfOrigin__c.field-meta.xml
<CustomField>
    <fullName>EUD_CountryOfOrigin__c</fullName>
    <label>[EUD] Country Of Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>