unpackaged/main/default/objects/Ordered_Part__c/fields/EUD_DestinationCountry__c.field-meta.xml
<CustomField>
    <fullName>EUD_DestinationCountry__c</fullName>
    <label>[EUD] Destination Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>