unpackaged/main/default/objects/Ordered_Part__c/fields/EUD_HTSCode__c.field-meta.xml
<CustomField>
    <fullName>EUD_HTSCode__c</fullName>
    <label>[EUD] HTS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>