unpackaged/main/default/objects/Ordered_Part__c/fields/EUD_Industry__c.field-meta.xml
<CustomField>
    <fullName>EUD_Industry__c</fullName>
    <label>[EUD] Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>