unpackaged/main/default/objects/Ordered_Part__c/fields/EUD_PartDescription__c.field-meta.xml
<CustomField>
    <fullName>EUD_PartDescription__c</fullName>
    <label>[EUD] Part Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>