unpackaged/main/default/objects/Ordered_Part__c/fields/EUD_ProductionType__c.field-meta.xml
<CustomField>
    <fullName>EUD_ProductionType__c</fullName>
    <label>[EUD] Production Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>