unpackaged/main/default/objects/Ordered_Part__c/fields/EUD_UnitWeight__c.field-meta.xml
<CustomField>
    <fullName>EUD_UnitWeight__c</fullName>
    <label>[EUD] Unit Weight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>