unpackaged/main/default/objects/Ordered_Part__c/fields/HasEverBeenRejected__c.field-meta.xml
<CustomField>
    <fullName>HasEverBeenRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ever Been Rejected?</label>
    <type>Checkbox</type>
</CustomField>