unpackaged/main/default/objects/Ordered_Part__c/fields/HasEverExpired__c.field-meta.xml
<CustomField>
    <fullName>HasEverExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicated if a part has ever been in an expired status</description>
    <label>Has Ever Expired?</label>
    <type>Checkbox</type>
</CustomField>