unpackaged/main/default/objects/Ordered_Part__c/fields/isCONF__c.field-meta.xml
<CustomField>
    <fullName>isCONF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoC Required?</label>
    <type>Checkbox</type>
</CustomField>