unpackaged/main/default/objects/Ordered_Part__c/fields/isDFARS__c.field-meta.xml
<CustomField>
    <fullName>isDFARS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DFARS?</label>
    <type>Checkbox</type>
</CustomField>