unpackaged/main/default/objects/Ordered_Part__c/fields/isDOMESTIC__c.field-meta.xml
<CustomField>
    <fullName>isDOMESTIC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domestic Material Required?</label>
    <type>Checkbox</type>
</CustomField>