unpackaged/main/default/objects/Ordered_Part__c/fields/isITAR__c.field-meta.xml
<CustomField>
    <fullName>isITAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ITAR?</label>
    <type>Checkbox</type>
</CustomField>