unpackaged/main/default/objects/Ordered_Part__c/fields/isManuallyQuoted__c.field-meta.xml
<CustomField>
    <fullName>isManuallyQuoted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manually Quoted?</label>
    <type>Checkbox</type>
</CustomField>