unpackaged/main/default/objects/Ordered_Part__c/fields/isMATERIAL__c.field-meta.xml
<CustomField>
    <fullName>isMATERIAL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Cert Required?</label>
    <type>Checkbox</type>
</CustomField>