unpackaged/main/default/objects/Ordered_Part__c/fields/isMATERIALTRACEABILITY__c.field-meta.xml
<CustomField>
    <fullName>isMATERIALTRACEABILITY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Traceability Required?</label>
    <type>Checkbox</type>
</CustomField>