unpackaged/main/default/objects/Ordered_Part__c/fields/JOB_BAD_OUTCOME_LATE_PROBABILITY__c.field-meta.xml
<CustomField>
    <fullName>JOB_BAD_OUTCOME_LATE_PROBABILITY__c</fullName>
    <label>JOB BAD OUTCOME LATE PROBABILITY</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>