unpackaged/main/default/objects/Ordered_Part__c/fields/JOB_BAD_OUTCOME_LATE_REASON_2__c.field-meta.xml
<CustomField>
    <fullName>JOB_BAD_OUTCOME_LATE_REASON_2__c</fullName>
    <label>JOB BAD OUTCOME LATE REASON 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>