unpackaged/main/default/objects/Ordered_Part__c/fields/JOB_BAD_OUTCOME_REJECTED_REASON_3__c.field-meta.xml
<CustomField>
    <fullName>JOB_BAD_OUTCOME_REJECTED_REASON_3__c</fullName>
    <label>JOB BAD OUTCOME REJECTED REASON 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>