unpackaged/main/default/objects/Ordered_Part__c/fields/MaterialType__c.field-meta.xml
<CustomField>
    <fullName>MaterialType__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>