unpackaged/main/default/objects/Ordered_Part__c/fields/MQPrice__c.field-meta.xml
<CustomField>
    <fullName>MQPrice__c</fullName>
    <label>MQ Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>