unpackaged/main/default/objects/Ordered_Part__c/fields/Ops_Order__c.field-meta.xml
<CustomField>
    <fullName>Ops_Order__c</fullName>
    <label>Ops Order</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>Ordered Parts</relationshipLabel>
    <relationshipName>Ordered_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>