unpackaged/main/default/objects/Ordered_Part__c/fields/ParentOrderID__c.field-meta.xml
<CustomField>
    <fullName>ParentOrderID__c</fullName>
    <label>Parent Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>