unpackaged/main/default/objects/Ordered_Part__c/fields/PartStatus__c.field-meta.xml
<CustomField>
    <fullName>PartStatus__c</fullName>
    <label>Part Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Offers Made</fullName>
            </value>
            <value>
                <fullName>Final Inspection Failed</fullName>
            </value>
            <value>
                <fullName>All Offers Expired</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
            <value>
                <fullName>Received by Xometry</fullName>
            </value>
            <value>
                <fullName>Post-processing</fullName>
            </value>
            <value>
                <fullName>Finishing Started</fullName>
            </value>
            <value>
                <fullName>To Be Outsourced</fullName>
            </value>
            <value>
                <fullName>Partner Rework</fullName>
            </value>
            <value>
                <fullName>Build Started</fullName>
            </value>
            <value>
                <fullName>Inhouse Rework</fullName>
            </value>
            <value>
                <fullName>Partner Remake</fullName>
            </value>
            <value>
                <fullName>Partner Cancelled</fullName>
            </value>
            <value>
                <fullName>Packed</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Built Unsuccessfully</fullName>
            </value>
            <value>
                <fullName>Ready for Final Inspection</fullName>
            </value>
            <value>
                <fullName>Final Inspection Done</fullName>
            </value>
            <value>
                <fullName>Materials Ordered</fullName>
            </value>
            <value>
                <fullName>Op 1 CYCLE Paused</fullName>
            </value>
            <value>
                <fullName>Op 1 PRG Done</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Auto-Quoted</fullName>
            </value>
            <value>
                <fullName>Manually-Quoted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>