unpackaged/main/default/objects/Ordered_Part__c/fields/RevisionNum__c.field-meta.xml
<CustomField>
    <fullName>RevisionNum__c</fullName>
    <label>Revision Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>