unpackaged/main/default/objects/Ordered_Part__c/fields/StaffQuoteReason__c.field-meta.xml
<CustomField>
    <fullName>StaffQuoteReason__c</fullName>
    <label>Staff Quote Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>