unpackaged/main/default/objects/Ordered_Part__c/fields/StaffQuoteReason_AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>StaffQuoteReason_AdditionalInfo__c</fullName>
    <label>Staff Quote Reason - Additional Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>