unpackaged/main/default/objects/Ordered_Part__c/fields/Subtractive__c.field-meta.xml
<CustomField>
    <fullName>Subtractive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subtractive?</label>
    <type>Checkbox</type>
</CustomField>