unpackaged/main/default/objects/Ordered_Part__c/fields/SurfaceRoughness__c.field-meta.xml
<CustomField>
    <fullName>SurfaceRoughness__c</fullName>
    <label>Surface Roughness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>