unpackaged/main/default/objects/Ordered_Part__c/fields/SurfaceRoughness_Finish__c.field-meta.xml
<CustomField>
    <fullName>SurfaceRoughness_Finish__c</fullName>
    <label>Surface Roughness - Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>