unpackaged/main/default/objects/Ordered_Part__c/fields/SurfaceRoughness_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SurfaceRoughness_Quantity__c</fullName>
    <label>Surface Roughness - # of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>