unpackaged/main/default/objects/Ordered_Part__c/fields/Threading_HoleDiameter__c.field-meta.xml
<CustomField>
    <fullName>Threading_HoleDiameter__c</fullName>
    <label>Threading - Hole Diameter</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>