unpackaged/main/default/objects/Ordered_Part__c/fields/Threading_MaxDepth__c.field-meta.xml
<CustomField>
    <fullName>Threading_MaxDepth__c</fullName>
    <label>Threading - Max Depth</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>