unpackaged/main/default/objects/Ordered_Part__c/fields/Threading_ThreadsPerInch__c.field-meta.xml
<CustomField>
    <fullName>Threading_ThreadsPerInch__c</fullName>
    <label>Threading - Threads Per Inch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>