unpackaged/main/default/objects/Ordered_Part__c/fields/Threading_ToolLife__c.field-meta.xml
<CustomField>
    <fullName>Threading_ToolLife__c</fullName>
    <label>Threading - Tool Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>