unpackaged/main/default/objects/Ordered_Part__c/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <label>Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>