unpackaged/main/default/objects/Ordered_Part__c/fields/Tolerance_Precision__c.field-meta.xml
<CustomField>
    <fullName>Tolerance_Precision__c</fullName>
    <label>Tolerance - Precision</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>