unpackaged/main/default/objects/Ordered_Part__c/fields/Tolerance_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Tolerance_Quantity__c</fullName>
    <label>Tolerance - # of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>