unpackaged/main/default/objects/Ordered_Part__c/fields/Unique_Ordered_Part_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Ordered_Part_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique Ordered Part ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>