unpackaged/main/default/objects/Ordered_Part__c/fields/Unique_Quoted_Part_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Quoted_Part_ID__c</fullName>
    <label>Unique Quoted Part ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>