unpackaged/main/default/objects/Ordered_Part__c/fields/UnitWeight__c.field-meta.xml
<CustomField>
    <fullName>UnitWeight__c</fullName>
    <label>Unit Weight (kg)</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>