unpackaged/main/default/objects/Ordered_Part__c/fields/Vendor_FinishGroup__c.field-meta.xml
<CustomField>
    <fullName>Vendor_FinishGroup__c</fullName>
    <label>Vendor Finish Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>