unpackaged/main/default/objects/Ordered_Part__c/fields/Xometry_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Order_ID__c</fullName>
    <label>Xometry Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>