unpackaged/main/default/objects/Ordered_Part__c/fields/Xometry_Ordered_Part_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Ordered_Part_ID__c</fullName>
    <externalId>true</externalId>
    <label>Xometry Ordered Part ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>