unpackaged/main/default/objects/Ordered_Part__c/fields/Xometry_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Quote_ID__c</fullName>
    <label>Xometry Quote ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>