unpackaged/main/default/objects/Ordered_Part__c/fields/Xometry_Quoted_Part_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Quoted_Part_ID__c</fullName>
    <label>Xometry Quoted Part ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>