unpackaged/main/default/objects/Ordered_Part__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomerPartID__c</columns>
    <columns>Xometry_Order_ID__c</columns>
    <columns>Xometry_Quote_ID__c</columns>
    <columns>QuantityOrdered__c</columns>
    <columns>PartStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>